PR/50905: Henning Petersen: Fix useless comparison (from FreeBSD)